Update And Create Parvande

--- a/Legal.Presentation/appsettings.json
+++ b/Legal.Presentation/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Mostafa": "Server=.;Database=LowDb;User Id = sa;Password = 1;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
